Closed Bug 1509576 Opened 6 years ago Closed 6 years ago

Crash in mozilla::dom::XULTooltipElement::PostHandleEvent

Categories

(Toolkit :: UI Widgets, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox-esr60 --- unaffected
firefox63 --- unaffected
firefox64 --- fixed
firefox65 --- fixed

People

(Reporter: philipp, Assigned: bdahl)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-dec99f3f-f445-4d1d-8a9d-c745a0181123. ============================================================= Top 10 frames of crashing thread: 0 xul.dll mozilla::dom::XULTooltipElement::PostHandleEvent dom/xul/XULTooltipElement.cpp:93 1 xul.dll static void mozilla::EventTargetChainItem::HandleEventTargetChain dom/events/EventDispatcher.cpp:644 2 xul.dll static void mozilla::EventTargetChainItem::HandleEventTargetChain dom/events/EventDispatcher.cpp:721 3 xul.dll mozilla::EventDispatcher::Dispatch dom/events/EventDispatcher.cpp:1156 4 xul.dll void nsXULPopupManager::FirePopupShowingEvent layout/xul/nsXULPopupManager.cpp:1458 5 xul.dll void nsXULPopupManager::ShowTooltipAtScreen layout/xul/nsXULPopupManager.cpp:847 6 xul.dll void nsXULTooltipListener::LaunchTooltip layout/xul/nsXULTooltipListener.cpp:532 7 xul.dll nsresult nsXULTooltipListener::ShowTooltip layout/xul/nsXULTooltipListener.cpp:426 8 xul.dll static void nsXULTooltipListener::sTooltipCallback layout/xul/nsXULTooltipListener.cpp:742 9 xul.dll nsTimerImpl::Fire xpcom/threads/nsTimerImpl.cpp:684 ============================================================= this crash signature is newly showing up in firefox 64, perhaps related to the work in bug 1461798?
Flags: needinfo?(bdahl)
Priority: -- → P1
Handle the case when there is no tooltip text provider.
Assignee: nobody → bdahl
Status: NEW → ASSIGNED
Flags: needinfo?(bdahl)
I'm not sure I understand how the tooltip provider can be null, but maybe this is during shutdown?
Pushed by bdahl@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1bbf691c2a7e Fix crash when showing tooltip. r=NeilDeakin
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Please nominate this for Beta approval when you get a chance.
Flags: needinfo?(bdahl)
Comment on attachment 9027994 [details] Bug 1509576 - Fix crash when showing tooltip. r=NeilDeakin [Beta/Release Uplift Approval Request] Feature/Bug causing the regression: Bug 1461798 User impact if declined: Firefox can crash under unknown circumstances. Is this code covered by automated tests?: No Has the fix been verified in Nightly?: No Needs manual test from QE?: No If yes, steps to reproduce: List of other uplifts needed: None Risk to taking this patch: Low Why is the change risky/not risky? (and alternatives if risky): Simple null ptr check added. String changes made/needed:
Flags: needinfo?(bdahl)
Attachment #9027994 - Flags: approval-mozilla-beta?
Comment on attachment 9027994 [details] Bug 1509576 - Fix crash when showing tooltip. r=NeilDeakin Crash fix, let's uplift for the 64 RC.
Attachment #9027994 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: