Bug 1509576 - Fix crash when showing tooltip. r=NeilDeakin

Handle the case when there is no tooltip text provider.

Differential Revision: https://phabricator.services.mozilla.com/D13105

--HG--
extra : moz-landing-system : lando